2008-06-07  Scott James Remnant  <scott@netsplit.com>

	* init/environ.c (environ_append): There are multiple cases where we
	append one environment table onto another, so we should have a
	function to do that.
	* init/environ.h: Prototype for it.
	* init/tests/test_environ.c (test_append): Test the new function.

	* init/job_process.c (job_process_run): Invert the logic; we nearly
	always want to pass the script with /dev/fd/NNN.  The only times we
	don't are if it doesn't exist, or if we're dealing with a single-line
	shell script.
	* init/tests/test_job_process.c (test_run): Update test cases to
	only expect an argv-execution for single-line scripts.

	* init/job.c (job_restart): Wrote the blocking bit slightly weirdly
	without neededing to, so leave it as it should be.

	* TODO: Update.

	* dbus/com.ubuntu.Upstart.Instance.xml (Start, Stop, Restart): Add
	simple instance control methods, these only change the goal of an
	existing instance - thus cannot pass environment.
	* init/job.c (job_start, job_stop, job_restart): Add methods, which
	look spookily similar to each other, except for the subtle yet
	important differences.
	(job_finished): Implement bottom halves.
	* init/job.h: Add prototypes.
	* init/tests/test_job.c (test_start, test_stop, test_restart): Add
	tests for the new methods.
	* init/blocked.h (blocked_type): Add enums for methods.
	* init/blocked.c (blocked_new): Handle methods here too
	* init/tests/test_blocked.c (test_new): Add tests for them.

2008-06-06  Scott James Remnant  <scott@netsplit.com>

	* init/blocked.h (blocked_type): Having a single message type won't
	work for the job cases, so expand to have many.
	* init/blocked.c (blocked_new): We'll just have to list them all here.
	* init/control.c (control_emit_event): Happily we create them
	individually anyway.
	* init/event.c (event_finished): And since we have to handle them
	individually, it'll actually protect us replying to the wrong one.
